# This file documents the revision history for Perl extension Catalyst.

5.8000_05
        - Added ru/ua translations to error page
        - Improve the clarity and verbosity of the warning when component
          resolution uses regex fallback. (jhannah)
        - Handle leading CRLF in HTTP requests sometimes sent by IE6 in 
          keep-alive requests. (andyg)
        - Fixes for FastCGI with IIS 6.0 (janus)
        - Passing request method exported by Catalyst::Test an extra
          parameter used to be ignored, but started breaking if the parameter
          was not a hash in 5.8000_04. Extra parameter is now ignored if
          it isn't a hashref (t0m)
        - Fix request argumentss getting corrupted if you override the 
          dispatcher and call an action which detaches (for 
          Catalyst::Plugin::Authorization::ACL) (t0m)
        - Fix calling use Catalyst::Test 'MyApp' 'foo' which used to work,
          but stopped as the 2nd parameter can be an options hash now (t0m)
        - Bump Moose dependency to fix make_immutable bug (t0m)
        - Use compile time extends in Catalyst::Controller (t0m)
        - Make Catalyst::Request::uploads attribute non-lazy, to fix
          test for Catalyst-Engine-Apache (t0m)
        - Bump version of MooseX::Emulate::Class::Accessor::Fast (t0m)
        - Stop using MooseX::Adopt::Class::Accessor::Fast by default, to stop
          breaking other packages which use Class::Accessor::Fast
        - Remove unused action_container_class attribute from 
          Catalyst::Dispatcher (t0m)
        - Replace {_body} instance access with calls to _body accessors (t0m)
        - Add backwards compatibility alias methods for private attributes on 
          Catalyst::Dispatcher which used to be public. Needed by 
          Catalyst::Plugin::Server and  Catalyst::Plugin::Authorization::ACL 
          (t0m)
        - Fix return value of $c->req->body, which delegates to the body