@@ -1,6 +1,7 @@
 # This file documents the revision history for Perl extension Catalyst.
 
 5.8000_05
+        - Add docs for finalize hook (dhoss)
         - Added ru/ua translations to error page
         - Improve the clarity and verbosity of the warning when component
           resolution uses regex fallback. (jhannah)
